Changed quadrotor to multirotor except where Honeybee is introduced

--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -29,7 +29,7 @@
         % Furthermore, it was deemed important to demonstrate the technique using experimental data and practical computational hardware.
 
         % \paragraph
-        % The controller design started with the mathematical derivation of a dynamical model for a quadrotor named Honeybee.
+        % The controller design started with the mathematical derivation of a dynamical model for a multirotor named Honeybee.
         % The dynamical equations of the multirotor-payload system and PX4 controller architecture were implemented in a MATLAB/Simulink simulation for controller design and testing.
         
         \paragraph
@@ -86,7 +86,7 @@
         \paragraph
         Furthermore, the different controllers were discussed and tested.
         The cascaded PID controller was described and the gains of each control loop were tuned in simulation.
-        This simulation environment was verified with practical data from the Honeybee quadrotor and was shown to be an accurate representation of the actual system.
+        This simulation environment was verified with practical data from the Honeybee multirotor and was shown to be an accurate representation of the actual system.
         
         \paragraph
         The baseline \gls{LQR} controller was also described and the weights were tuned for the simulated multirotor-payload system.
