--- a/control/lqr.tex
+++ b/control/lqr.tex
@@ -7,7 +7,7 @@
         An \gls{LQG} was effectively used by \cite{Slabber2020} for swing-damping control of a multirotor and suspended payload system.
         However, to focus on the controller performance without considering the effect of state estimation, it is assumed that full-state feedback is available in this work.
         Therefore, an \gls{LQR} for North velocity control with full-state feedback is presented in this section. 
-        This controller structure can be duplicated for East velocity control due to the symmetry of a quadrotor.
+        This controller structure can be duplicated for East velocity control due to the symmetry of a multirotor.
         
         \paragraph
         An \gls{LQR} does not inherently apply integral action and does not achieve zero steady-state tracking error in the presence of disturbances.
