--- a/control/simulation_environment.tex
+++ b/control/simulation_environment.tex
@@ -9,7 +9,7 @@
     The SITL and Gazebo simulation also has a longer runtime per simulation, which further adds to the development time of the iterative control system design process.
     
     \paragraph
-    The quadrotor and suspended payload system is modelled in Simulink with the differential equations derived in Chapter~\ref{chap:modelling}.
+    The multirotor and suspended payload system is modelled in Simulink with the differential equations derived in Chapter~\ref{chap:modelling}.
     The resulting controllers are also applied in Simulink.
     Using the cascade \gls{PID} control architecture (discussed in the sections below), this simulation environment was verified against practical data with and without a payload.
     The plots in 
