--- a/system_id/param_estimation.tex
+++ b/system_id/param_estimation.tex
@@ -14,7 +14,7 @@
 \subsection{White-box model}
 
     \paragraph
-    A white-box model was derived a~priori by \cite{Slabber2020} to represent the dynamics of the quadrotor-payload system.
+    A white-box model was derived a~priori by \cite{Slabber2020} to represent the dynamics of the multirotor-payload system.
     The non-linear dynamical equations derived in Chapter~\ref{chap:modelling} were linearised to produce a linear state-space model.
     The equations were linearised around hover by applying small angle approximations.
     As discussed in Section~\ref{sec:payload_assumptions}, the payload is attached to the \gls{CoM} of the multirotor.
